<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewDummy"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="141dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/language"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDummy" />

    <RadioGroup
        android:id="@+id/rg_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/tv_language"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDummy">

        <RadioButton
            android:id="@+id/rb_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/rb_arabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/arabic" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/location"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="@+id/tv_language"
        app:layout_constraintTop_toBottomOf="@+id/tv_language" />

    <RadioGroup
        android:id="@+id/rg_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/rg_language"
        app:layout_constraintTop_toBottomOf="@+id/rg_language">

        <RadioButton
            android:id="@+id/rb_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/gps" />

        <RadioButton
            android:id="@+id/rb_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/map" />

    </RadioGroup>

    <ImageView
        android:id="@+id/img_search_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/et_searchMap"
        app:layout_constraintStart_toStartOf="@+id/et_searchMap"
        app:layout_constraintTop_toTopOf="@+id/et_searchMap"
        app:srcCompat="@drawable/baseline_search_24"
        android:elevation="10dp"
        />

    <ImageView
        android:id="@+id/img_clear_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/et_searchMap"
        app:layout_constraintEnd_toEndOf="@+id/et_searchMap"
        app:layout_constraintTop_toTopOf="@+id/et_searchMap"
        app:srcCompat="@drawable/baseline_close_24"
        android:elevation="10dp"
        />

    <EditText
        android:id="@+id/et_searchMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/search_map"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_location"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        />


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rv_search_suggestions"
        tools:layout="@android:layout/activity_list_item"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_suggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_searchMap" />


    <Button
        android:id="@+id/btn_save_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgCurrentLocation"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:srcCompat="@drawable/baseline_gps_fixed_24" />




</androidx.constraintlayout.widget.ConstraintLayout>