<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.weathermate.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_preferencesFragment"
            app:destination="@id/navigation_preferences" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.weathermate.presentation.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_navigation_favorites_to_mapFragment"
            app:destination="@id/mapFragment" />
        <action
            android:id="@+id/action_navigation_favorites_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_preferences"
        android:name="com.example.weathermate.presentation.initial_preferences.InitialPreferencesFragment"
        android:label="@string/title_preferences"
        tools:layout="@layout/fragment_initial_preferences" >
        <action
            android:id="@+id/action_preferencesFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.weathermate.presentation.settings.SettingsFragment"
        android:label="@string/title_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_mapFragment"
            app:destination="@id/mapFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.weathermate.presentation.map.MapFragment"
        android:label="MapFragment" >
        <argument
            android:name="isFromSettings"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="isFromFavorites"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="isFromAlerts"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/navigation_alerts"
        android:name="com.example.weathermate.presentation.alerts.AlertFragment"
        android:label="fragment_alert"
        tools:layout="@layout/fragment_alert" >
        <action
            android:id="@+id/action_navigation_alerts_to_mapFragment"
            app:destination="@id/mapFragment" />
    </fragment>

</navigation>