<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imgLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scrollViewIDHome"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="always"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".presentation.home.HomeFragment">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutHomeInside"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textViewCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:elevation="20dp"
                    android:text="@string/unknown"
                    android:textColor="@color/generalText"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewCurrentTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:elevation="20dp"
                    android:text="Current Temperature"
                    android:textColor="@color/generalText"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCity" />

                <TextView
                    android:id="@+id/textLastCheckedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:elevation="20dp"
                    android:text="@string/lastCheckedAt"
                    android:textColor="@color/generalText"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCurrentTemp" />

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:elevation="20dp"
                    android:text="Date"
                    android:textColor="@color/generalText"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textLastCheckedAt" />

                <TextView
                    android:id="@+id/textViewTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:elevation="20dp"
                    android:text="Time"
                    android:textColor="@color/generalText"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

                <TextView
                    android:id="@+id/textViewWeatherDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:elevation="20dp"
                    android:text="Weather Description"
                    android:textColor="@color/generalText"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTime" />


                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/imageViewWeatherIcon"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="-50dp"
                    android:elevation="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewWeatherDescription"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/verticalBarrier"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewHourlyForecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:overScrollMode="always"
                    android:padding="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewWeatherIcon" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewDailyForecast"
                    android:layout_width="411dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:overScrollMode="always"

                    android:padding="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewHourlyForecast" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/verticalBarrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="right"
                    app:constraint_referenced_ids="textViewCurrentTemp,
        textViewWeatherDescription, textViewDate, textViewTime"
                    tools:layout_editor_absoluteX="286dp" />


                <androidx.cardview.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:cardCornerRadius="26dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewDailyForecast">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/containerLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/gradient_item_fav_alert">

                        <ImageView
                            android:id="@+id/imgPressure"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/pressure"
                            app:layout_constraintEnd_toStartOf="@+id/imgHumidity"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvPressure"
                            android:textColor="@color/generalText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/pressure"
                            app:layout_constraintEnd_toEndOf="@+id/imgPressure"
                            app:layout_constraintStart_toStartOf="@+id/imgPressure"
                            app:layout_constraintTop_toBottomOf="@+id/imgPressure" />


                        <ImageView
                            android:id="@+id/imgHumidity"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/humidity"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imgPressure"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvHumidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/generalText"
                            android:layout_marginTop="10dp"
                            android:text="@string/humidity"
                            app:layout_constraintEnd_toEndOf="@+id/imgHumidity"
                            app:layout_constraintStart_toStartOf="@+id/imgHumidity"
                            app:layout_constraintTop_toBottomOf="@+id/imgHumidity" />

                        <ImageView
                            android:id="@+id/imgCloudiness"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/cloudiness"
                            app:layout_constraintEnd_toEndOf="@+id/imgPressure"
                            app:layout_constraintStart_toStartOf="@+id/imgPressure"
                            app:layout_constraintTop_toBottomOf="@+id/tvPressure" />

                        <TextView
                            android:id="@+id/tvCloudiness"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/generalText"
                            android:layout_marginTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="Cloudiness"
                            app:layout_constraintEnd_toEndOf="@+id/imgPressure"
                            app:layout_constraintStart_toStartOf="@+id/imgPressure"
                            app:layout_constraintTop_toBottomOf="@+id/imgCloudiness" />

                        <ImageView
                            android:id="@+id/imgWind"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/wind"
                            app:layout_constraintEnd_toEndOf="@+id/imgHumidity"
                            app:layout_constraintStart_toStartOf="@+id/imgHumidity"
                            app:layout_constraintTop_toBottomOf="@+id/tvHumidity" />

                        <TextView
                            android:id="@+id/tvWind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/generalText"
                            android:layout_marginTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/wind"
                            app:layout_constraintEnd_toEndOf="@+id/imgHumidity"
                            app:layout_constraintStart_toStartOf="@+id/imgHumidity"
                            app:layout_constraintTop_toBottomOf="@+id/imgWind" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
